# PGR_project

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MainWindow.cpp  MainWindow2.cpp  README.md  SimulatedObject.h  main.cpp  main_collision_demo.cpp  main_tear_demo.cpp  shader.h  sim_test_main.cpp  test.cpp  tutorial2.vert  tutorial3.frag
graphicObjects/: SimpleGraphicsModel.cpp  SimpleGraphicsModelCreator.cpp  SimpleGraphicsModelCreator.h
graphics/: GraphicsCore.cpp  GraphicsCore.h  Shader.cpp  Shader.h  ShadowCalc.cpp  ShadowCalc.h
graphics/camera/: Camera.h
graphics/core/: GraphicsCore.cpp  GraphicsCore.h  Shader.cpp  Shader.h
graphics/objects/: ComplexGraphicsModel.cpp  ComplexGraphicsModel.h  DEPRECATED_SimpleGraphicsModel.cpp  DEPRECATED_SimpleGraphicsModel.h  DEPRECATED_SimpleGraphicsModelCreator.cpp  DEPRECATED_SimpleGraphicsModelCreator.h  DEPRECATED_SoftBodyGraphicsModel.cpp  DEPRECATED_SoftBodyGraphicsModel.h  GraphicsModel.h  OBJ_Loader.h  OBJ_loader.cpp  SimpleGraphicsModel.cpp  SimpleGraphicsModel.h  SimpleGraphicsModelCreator.h  SoftBodyGraphicsModel.h
graphics/shaders/: main_fragment_shader.glsl  main_vertex_shader.glsl  shadow_fragment.glsl  shadow_vertex.glsl
libs/glew/: glew.pc
misc/: GeoUtils.h  Logger.h  RandomGenerator.h  StdoutLogger.cpp  StdoutLogger.h
simulation/: Constraint.cpp  Constraint.h  ForceGenerator.cpp  GravityForce.cpp  GravityForce.h  SimpleGraphicsModel.h  SimulatedModel.cpp  SimulatedModel.h  SimulatedObject.cpp  SimulatedObject.h  Simulation.cpp  Simulation.h  SoftBodyGraphicsModel.cpp  SoftBodyGraphicsModel.h  SoftBodySimulation.h  Spring.h  common.h
simulation/base/: ForceGenerator.h  Integrator.h  SimObject.h  SimpleObject.h  SimulatedObject.h
simulation/collisions/: CollisionBins.cpp  CollisionBins.h  CollisionChecker.cpp  CollisionChecker.h  CollisionObject.cpp  CollisionObject.h  VertexCollisionBins.cpp  VertexCollisionBins.h  VertexCollisionChecker.cpp  VertexCollisionChecker.h
simulation/common/: common.h
simulation/forces/: ConstantForce.cpp  ConstantForce.h  DragForce.cpp  DragForce.h  ForceBase.h  ForceGenerator.h  GravityForce.cpp  GravityForce.h  LocationLimit.cpp  LocationLimit.h  SnapableSpring.cpp  SnapableSpring.h  Spring.cpp  Spring.h
simulation/forces/constraints/: Constraint.h  DistanceConstraint.cpp  DistanceConstraint.h  LengthConstraint.cpp  LengthConstraint.h  PointConstraint.cpp  PointConstraint.h  PositionConstraint.cpp  PositionConstraint.h
simulation/forces/springs/: LimitedSnappableSpringGroup.cpp  LimitedSnappableSpringGroup.h  SnappableSpring.cpp  SnappableSpring.h  SnappableSpringGroup.cpp  SnappableSpringGroup.h  Spring.cpp  Spring.h
simulation/forces/springs/groups/: LimitedSnappableSpringGroup.cpp  LimitedSnappableSpringGroup.h  SnappableSpringGroup.cpp  SnappableSpringGroup.h  TearGroup.cpp  TearGroup.h
simulation/integrators/: EulerIntegrator.cpp  EulerIntegrator.h  Integrator.h  VerletIntegrator.cpp  VerletIntegrator.h
simulation/objects/: ComplexObject.cpp  ComplexObject.h  Constraint.h  LengthConstraint.cpp  LengthConstraint.h  PointConstraint.cpp  PointConstraint.h  ShapedComplexObject.cpp  ShapedComplexObject.h  SimModel.cpp  SimModel.h  SimObject.cpp  SimObject.h  SimObjectWithModel.h  SimVertex.cpp  SimVertex.h  SimpleObject.cpp  SimpleObject.h  SimulatedModel.cpp  SimulatedModel.h  SimulatedVertex.cpp  SimulatedVertex.h  Vertex.cpp  Vertex.h
simulation/simulations/: ClothSim.cpp  ClothSim.h  ClothSimulation.cpp  ClothSimulation.h  CollisionDemoSimulation.cpp  CollisionDemoSimulation.h  GoalSoftBodySimulation.cpp  GoalSoftBodySimulation.h  Simulation.cpp  Simulation.h  SoftBodySimulation.cpp  SoftBodySimulation.h  TearDemoSimulation.cpp  TearDemoSimulation.h
